--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Truffledog Games
-description: Bookmark this to keep an eye on my project updates!
+description: Under construction!
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
